Bug 126293 - Save icon changes size when document gets modified
Summary: Save icon changes size when document gets modified
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisected, bisected, regression, topicUI
: 126230 126349 126957 127757 (view as bug list)
Depends on:
Blocks: Toolbars
  Show dependency treegraph
 
Reported: 2019-07-09 00:14 UTC by Mike Kaganski
Modified: 2019-11-05 16:16 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Save Icon Changes Size screencast (396.06 KB, image/gif)
2019-07-09 00:14 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-07-09 00:14:45 UTC
Created attachment 152657 [details]
Save Icon Changes Size screencast

With Version: 6.3.0.1 (x64)
Build ID: 41ac97386aba908b6db860cfb4cfe2da871886ae
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

when the open document gets modified, and the icon on the Save toolbar button needs to change to indicate that, its size is changed: see attached screencast.

This is reproducible with any built-in icon set (Colibre, Sifr, Breeze), including SVG variants. Toolbar icon size is Automatic.
Comment 1 Mike Kaganski 2019-07-09 00:15:59 UTC
Possibly related: DPI scaling is 150% in Windows settings.
Comment 2 V Stuart Foote 2019-07-09 04:21:29 UTC
*** Bug 126230 has been marked as a duplicate of this bug. ***
Comment 3 V Stuart Foote 2019-07-09 04:22:39 UTC
New as per dupe 126230, Tango icon theme with scaled UI
Comment 4 V Stuart Foote 2019-07-11 22:57:41 UTC
*** Bug 126349 has been marked as a duplicate of this bug. ***
Comment 5 Aron Budea 2019-07-13 03:58:11 UTC
Bibisected to the following commit using repo bibisect-win32-6.3, but I'm not sure if the commit is directly responsible for this, probably somewhere an icon file is incorrect.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=15f0d61206dddee12159b68aeab5c860e3d5aff4
author		Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-07 10:29:02 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-08 19:15:09 +0100

use Image(OUString) instead of Image(Bitmap(OUString))
Comment 6 Noel Grandin 2019-07-16 14:48:37 UTC
The problem is the code in
   SaveToolbarController::updateImage
https://opengrok.libreoffice.org/xref/core/framework/source/uielement/popuptoolbarcontroller.cxx?r=adc295a1#480

where it follows a completel different path for the "save" icon.

Probably this code needs to take into account DPI settings somehow.
Comment 7 Maxim Monastirsky 2019-09-16 16:07:16 UTC
*** Bug 126957 has been marked as a duplicate of this bug. ***
Comment 8 V Stuart Foote 2019-09-16 17:24:51 UTC
@Maxim, Noel -- do you think bug 127434 would be a similar issue of bypassing UI scaling applied to icons of the Sidebar's Tab bar [1], and icons of the Status Bar's view layout [2]?

=-ref-=
[1] https://opengrok.libreoffice.org/xref/core/sfx2/source/sidebar/TabBar.cxx?r=aef615ac#93

[2] https://opengrok.libreoffice.org/xref/core/sw/source/uibase/utlui/viewlayoutctrl.cxx?r=16ee4d43#89
Comment 9 V Stuart Foote 2019-09-16 17:47:41 UTC
(In reply to V Stuart Foote from comment #8)

Oh, and likewise the other icons on the status bar that are not picking up os/DE system scaling of the UI...

The selection mode
https://opengrok.libreoffice.org/xref/core/svx/source/stbctrls/selctrl.cxx?r=aafc733e#135

The modified state
https://opengrok.libreoffice.org/xref/core/svx/source/stbctrls/modctrl.cxx?r=6256797d#140
Comment 11 V Stuart Foote 2019-09-25 14:29:49 UTC
*** Bug 127757 has been marked as a duplicate of this bug. ***
Comment 12 V Stuart Foote 2019-10-06 13:27:23 UTC
Confirm scaling issues fixed in master (2019-09-26), don't see a backport to 6.3 in gerrit...

@Michael M. ?
Comment 13 Xisco Faulí 2019-10-16 10:46:17 UTC
(In reply to V Stuart Foote from comment #12)
> Confirm scaling issues fixed in master (2019-09-26), don't see a backport to
> 6.3 in gerrit...
> 
> @Michael M. ?

@Michael Meeks, considering your commit fixed this issue and bug 127434, should it be backported to 6.3 ?
Comment 14 Michael Meeks 2019-10-19 19:12:08 UTC
Sure - why not if someone wants to test & maintain that, I don't have time personally, sorry !
Comment 15 Commit Notification 2019-11-05 16:16:47 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/7fca2b0113c687098cfa6a5a4a9a8e4598f61284

tdf#126293 Use lazy-loading stock Image to simplify fwk image lists

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.