tdf#126293 Use lazy-loading stock Image to simplify fwk image lists

Project stock names through XGraphic via origin URL.

(cherry picked from commit 77b88eebaadebb626108172e4f2de36c60960051)

Reviewed-on: https://gerrit.libreoffice.org/79420
Tested-by: Jenkins
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit ac6fe36ac6ccebf3bf891b891bd47c8e3744a056)

Change-Id: Ib445694f7c142a163ef7e7bc0beea39b88b99e14
Reviewed-on: https://gerrit.libreoffice.org/81965
Tested-by: Jenkins
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>